<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="activity.com.jfmr.akacrud.activity.ListActivity">

    <item
        android:id="@+id/miIdTitulo"
        android:orderInCategory="100"
        android:title="@string/filter_by"
        app:showAsAction="never" />

    <item
        android:id="@+id/miIdIDAsc"
        android:orderInCategory="200"
        android:title="@string/filter_by_id_asc"
        app:showAsAction="never" />
    <item
        android:id="@+id/miIdIDDesc"
        android:orderInCategory="300"
        android:title="@string/filter_by_id_desc"
        app:showAsAction="never" />

    <item
        android:id="@+id/miIdDateAsc"
        android:orderInCategory="100"
        android:title="@string/filter_by_date_asc"
        app:showAsAction="never" />
    <item
        android:id="@+id/miIdDateDesc"
        android:orderInCategory="100"
        android:title="@string/filter_by_date_desc"
        app:showAsAction="never" />


</menu>
