<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_user_profile"
    android:background="@color/background"
    tools:context=".activity.UserProfileActivity"
    >


<android.support.v4.widget.NestedScrollView


    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="activity.com.jfmr.akacrud.fragment.UserProfileFragment"
    android:descendantFocusability="blocksDescendants">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/idRlUserFragment"

        >

        <TextView
            android:id="@+id/ivTvId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="@dimen/margin_standar"
            android:layout_marginEnd="@dimen/margin_standar"
            android:layout_marginRight="@dimen/margin_standar"
            android:text="@string/Id_title"
            />

        <TextView
            android:id="@+id/idTvIdResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/ivTvId"
            android:layout_toRightOf="@+id/ivTvId" />

        <TextView
            android:id="@+id/ivTvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/ivTvId"
            android:layout_marginBottom="@dimen/margin_standar"
            android:layout_marginEnd="@dimen/margin_standar"
            android:layout_marginRight="@dimen/margin_standar"
            android:text="@string/name_title" />

        <EditText
            android:id="@+id/idEtNameResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:layout_alignBaseline="@+id/ivTvName"
            android:layout_alignBottom="@+id/ivTvName"
            android:layout_toEndOf="@+id/ivTvName"
            android:layout_toRightOf="@+id/ivTvName"
            android:enabled="false"
            style="@style/Title"/>

        <TextView
            android:id="@+id/idTvDateOfBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/ivTvName"
            android:layout_marginBottom="@dimen/margin_standar"
            android:text="@string/date_of_birth_title"
            android:layout_marginEnd="@dimen/margin_standar"
            android:layout_marginRight="@dimen/margin_standar"/>

        <TextView
            android:id="@+id/idTvDateOfBirthResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignBaseline="@+id/idTvDateOfBirth"
            android:layout_alignBottom="@+id/idTvDateOfBirth"
            android:layout_toRightOf="@+id/idTvDateOfBirth"
            android:layout_toEndOf="@+id/idTvDateOfBirth"
          />


        <TextView
            android:id="@+id/idTvTimeOfBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/idTvDateOfBirth"
            android:text="@string/hour_birth_title"
            android:layout_marginEnd="@dimen/margin_standar"
            android:layout_marginRight="@dimen/margin_standar"/>
        <TextView
            android:id="@+id/idTvTimeOfBirthResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignBaseline="@+id/idTvTimeOfBirth"
            android:layout_alignBottom="@+id/idTvTimeOfBirth"
            android:layout_toRightOf="@+id/idTvTimeOfBirth"
            android:layout_toEndOf="@+id/idTvTimeOfBirth"
            />

      <ImageView
          android:id="@+id/idIvSave"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@android:drawable/ic_menu_save"
          android:layout_centerHorizontal="true"
          android:layout_below="@id/idTvTimeOfBirthResult"
          android:visibility="invisible"/>

    </RelativeLayout>
    <!-- TODO: Update blank fragment layout -->


</android.support.v4.widget.NestedScrollView>
</RelativeLayout>